syntax = "proto3";

package project.proto;

import "google/protobuf/timestamp.proto";

message ProjectCreatedMsg {
  string Key = 1;
  string Id = 2;
  string Name = 3;
  google.protobuf.Timestamp OccurredOn = 4;
}

message TaskCreatedMsg {
  string Key = 1;
  string Id = 2;
  string Title = 3;
  string ProjectId = 4;
  google.protobuf.Timestamp OccurredOn = 5;
}
